// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DialogContent /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  padding: 0 calc(var(--pv-size-base) * 4);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-2 {
  overflow: hidden;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 0;
  visibility: hidden;
  margin: 0 calc(var(--pv-size-base) * -2);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  gap: calc(var(--pv-size-base) * 2);
  padding: calc(var(--pv-size-base) * 2) calc(var(--pv-size-base) * 4);
  box-sizing: border-box;
  border-radius: 4px;
  background-color: var(--pv-color-wrong-tint-5);
  margin: calc(var(--pv-size-base) * 2) 0;
}

.emotion-4 {
  min-width: 0px;
  -webkit-flex-basis: 0px;
  -ms-flex-preferred-size: 0px;
  flex-basis: 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  padding: var(--pv-size-base) 0px;
  min-height: var(--pv-text-b3-height);
  overflow-wrap: break-word;
}

.emotion-5 {
  margin: 0;
  color: var(--pv-color-wrong);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
}

.emotion-6 {
  overflow-y: auto;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: calc(var(--pv-size-base) * 6);
}

<div
    class="my-class-name emotion-0"
    data-key="dialog.content"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div>
          <div
            class="emotion-3"
            role="alert"
            variant="wrong"
          >
            <div
              class="emotion-4"
            >
              <p
                class="emotion-5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DialogContent /> > should render error 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  padding: 0 calc(var(--pv-size-base) * 4);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-2 {
  overflow: visible;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
  margin: 0 calc(var(--pv-size-base) * -2);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  gap: calc(var(--pv-size-base) * 2);
  padding: calc(var(--pv-size-base) * 2) calc(var(--pv-size-base) * 4);
  box-sizing: border-box;
  border-radius: 4px;
  background-color: var(--pv-color-wrong-tint-5);
  margin: calc(var(--pv-size-base) * 2) 0;
}

.emotion-4 {
  min-width: 0px;
  -webkit-flex-basis: 0px;
  -ms-flex-preferred-size: 0px;
  flex-basis: 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  padding: var(--pv-size-base) 0px;
  min-height: var(--pv-text-b3-height);
  overflow-wrap: break-word;
}

.emotion-5 {
  margin: 0;
  color: var(--pv-color-wrong);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
}

.emotion-6 {
  overflow-y: auto;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: calc(var(--pv-size-base) * 6);
}

<div
    class="emotion-0"
    data-key="dialog.content"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div>
          <div
            class="emotion-3"
            role="alert"
            variant="wrong"
          >
            <div
              class="emotion-4"
            >
              <p
                class="emotion-5"
              >
                Some API error
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DialogContent /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  padding: 0 calc(var(--pv-size-base) * 4);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-2 {
  overflow: hidden;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 0;
  visibility: hidden;
  margin: 0 calc(var(--pv-size-base) * -2);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  gap: calc(var(--pv-size-base) * 2);
  padding: calc(var(--pv-size-base) * 2) calc(var(--pv-size-base) * 4);
  box-sizing: border-box;
  border-radius: 4px;
  background-color: var(--pv-color-wrong-tint-5);
  margin: calc(var(--pv-size-base) * 2) 0;
}

.emotion-4 {
  min-width: 0px;
  -webkit-flex-basis: 0px;
  -ms-flex-preferred-size: 0px;
  flex-basis: 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  padding: var(--pv-size-base) 0px;
  min-height: var(--pv-text-b3-height);
  overflow-wrap: break-word;
}

.emotion-5 {
  margin: 0;
  color: var(--pv-color-wrong);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
}

.emotion-6 {
  overflow-y: auto;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: calc(var(--pv-size-base) * 6);
}

<div
    class="emotion-0"
    data-key="dialog.content"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div>
          <div
            class="emotion-3"
            role="alert"
            variant="wrong"
          >
            <div
              class="emotion-4"
            >
              <p
                class="emotion-5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;
